--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "php": "^8.1",
     "guzzlehttp/guzzle": "^7.0",
-    "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+    "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
     "sendinblue/api-v3-sdk": "^6.1|^7.0|^8.0"
   },
   "require-dev": {
